# outline-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
src/outline_cli/: __init__.py  cli.py  client.py  commands_documents.py  commands_remaining.py  config.py  spec_parser.py
